Fix header alignment

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,21 +2,31 @@
     width: 100%;
     margin-top: 2rem;
     margin-bottom: 2rem;
-    text-align: right;
+}
+
+.Header .left {
+    display: inline-block;
+}
+
+.Header .right {
+    float: right;
 }
 
 .Header p {
     display: inline;
-    text-align: left;
     font-weight: bold;
 }
 
+.Header a,
 .Header button {
     color: inherit;
     text-decoration: none;
-    font-size: inherit;
     font-style: italic;
     margin-left: 2rem;
+}
+
+.Header button {
+    font-size: inherit;
     border: none;
     background-color: inherit;
     cursor: pointer;
@@ -24,13 +34,6 @@
 
 .Header button:hover {
     font-weight: bold;
-}
-
-.Header a {
-    color: inherit;
-    text-decoration: none;
-    font-style: italic;
-    margin-left: 2rem;
 }
 
 .Header a:hover {
